<?xml version="1.0"?>
<package>
  <name>baxter_action_msgs</name>
  <version>0.1.0</version>
  <description>The baxter_action_msgs package</description>

  <maintainer email="brawner@todo.todo">brawner</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_action_server</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
</package>