<?xml version="1.0"?>
<package>
  <name>baxter_action_server</name>
  <version>0.1.0</version>
  <description>The baxter_action_server package</description>

  <maintainer email="brawner@todo.todo">brawner</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation></build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_grasps_server</build_depend>
  <build_depend>baxter_props</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_grasps_server</run_depend>
  <run_depend>baxter_props</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>