<?xml version="1.0"?>
<package>
  <name>helpful_baxter</name>
  <version>0.0.0</version>
  <description>The helpful_baxter package</description>

  <maintainer email="brawner@todo.todo">brawner</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>baxter_action_server</run_depend>
  <run_depend>helpful_baxter_launch</run_depend>
  <run_depend>ros_robocook</run_depend>
  <run_depend>baxter_action_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>