<?xml version="1.0"?>
<package>
  <name>helpful_baxter_launch</name>
  <version>0.0.0</version>
  <description>The helpful_baxter_launch package</description>

  <maintainer email="brawner@todo.todo">brawner</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_action_server</build_depend>
  <build_depend>baxter_moveit_config</build_depend>
  <build_depend>object_identifier</build_depend>
  <build_depend>ros_robocook</build_depend>
  <run_depend>baxter_action_server</run_depend>
  <run_depend>baxter_moveit_config</run_depend>
  <run_depend>object_identifier</run_depend>
  <run_depend>ros_robocook</run_depend>

</package>