<?xml version="1.0"?>
<package>
  <name>ros_robocook</name>
  <version>0.1.0</version>
  <description>The ros_robocook package</description>
  <maintainer email="kofarrell@todo.todo">kofarrell</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>move_msgs</build_depend>
  <build_depend>move_msgs_generator</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_action_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>